--- a/index.html
+++ b/index.html
@@ -1,116 +1,38 @@
-<HTML>
-<HEADER><TITLE> See on browser tab</TITLE></HEADER>
-<BODY style="background-color:grey">
-<a class="weatherwidget-io" href="https://forecast7.com/en/43d65n79d38/toronto/" datalabel_1="TORONTO" data-label_2="WEATHER" data-theme="original" >TORONTO WEATHER</a>
-<script>
-!function(d,s,id){var
-js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id
-=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs
-);}}(document,'script','weatherwidget-io-js');
-</script>
-<BR>
-<BR>
-<BR>
-<iframe
-src="https://calendar.google.com/calendar/embed?src=andrew.jimenez%40tdsb.on.ca&ctz=Ameri
-ca%2FToronto" style="border: 0" width="500" height="600" frameborder="0"
-scrolling="no"></iframe>
-</BODY>
-<BR>
-<BR>
-<BR>
-<!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container">
-  <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-overview.js" async>
-  {
-  "symbols": [
-    [
-      "Apple",
-      "AAPL|1D"
-    ],
-    [
-      "Google",
-      "GOOGL|1D"
-    ],
-    [
-      "Microsoft",
-      "MSFT|1D"
-    ]
-  ],
-  "chartOnly": false,
-  "width": "100%",
-  "height": "100%",
-  "locale": "en",
-  "colorTheme": "dark",
-  "autosize": true,
-  "showVolume": false,
-  "showMA": false,
-  "hideDateRanges": false,
-  "hideMarketStatus": false,
-  "hideSymbolLogo": false,
-  "scalePosition": "right",
-  "scaleMode": "Normal",
-  "fontFamily": "-apple-system, BlinkMacSystemFont, Trebuchet MS, Roboto, Ubuntu, sans-serif",
-  "fontSize": "10",
-  "noTimeScale": false,
-  "valuesTracking": "1",
-  "changeMode": "price-and-percent",
-  "chartType": "area",
-  "maLineColor": "#2962FF",
-  "maLineWidth": 1,
-  "maLength": 9,
-  "headerFontSize": "medium",
-  "lineWidth": 2,
-  "lineType": 0,
-  "dateRanges": [
-    "1d|1",
-    "1m|30",
-    "3m|60",
-    "12m|1D",
-    "60m|1W",
-    "all|1M"
-  ]
-}
-  </script>
-</div>
-<!-- TradingView Widget END -->
-<!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container">
-  <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js" async>
-  {
-  "symbol": "NASDAQ:NVDA",
-  "width": 350,
-  "height": 220,
-  "locale": "en",
-  "dateRange": "12M",
-  "colorTheme": "dark",
-  "isTransparent": false,
-  "autosize": false,
-  "largeChartUrl": ""
-}
-  </script>
-</div>
-<!-- TradingView Widget END -->
-<!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container">
-  <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js" async>
-  {
-  "symbol": "FX_IDC:USDBDT",
-  "width": 350,
-  "height": 220,
-  "locale": "en",
-  "dateRange": "12M",
-  "colorTheme": "dark",
-  "isTransparent": false,
-  "autosize": false,
-  "largeChartUrl": ""
-}
-  </script>
-</div>
-<!-- TradingView Widget END -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta name="description" content="Pose Detection Application using TensorFlow.js and Teachable
+Machine">
+ <meta name="author" content="Your Name">
+ <title>Pose Detection</title>
+ <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+ <div class="container">
+ <div class="button-container">
+ <div class="button-pair">
+ <button type="button" onclick="init()">Start Webcam</button>
+ <button type="button" onclick="stopWebcam()">Stop Webcam</button>
+ </div>
+ <div class="button-pair">
+ <button type="button" onclick="playInstructionVideo()">Start Video</button>
+ <button type="button" onclick="stopInstructionVideo()">Stop Video</button>
+ </div>
+ </div>
+ <div class="video-container">
+ <div><canvas id="canvas"></canvas></div>
+ <div class="video-wrapper">
+ <video id="instructionVideo" src="vid.mp4"></video>
+ <div id="videoTime">Time: 0:00</div>
+ </div>
+ </div>
+ <div id="label-container"></div>
+ </div>
+
+ <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachinepose.min.js"></script>
+ <script src="script.js"></script>
+</body>
+</html>
